sandbox/output
ProfitJava6.java:9: error: no suitable method found for timedJava6(String,<anonymous MySupplier<Double>>)
    final Double costs = Timing.timedJava6("Cost calculation",
                               ^
    method Timing.<A#1>timedJava6(String,Supplier<A#1>) is not applicable
      (cannot infer type-variable(s) A#1
        (argument mismatch; <anonymous MySupplier<Double>> cannot be converted to Supplier<A#1>))
    method Timing.<A#2>timedJava6(String,Function<String,Void>,Supplier<A#2>) is not applicable
      (cannot infer type-variable(s) A#2
        (actual and formal argument lists differ in length))
  where A#1,A#2 are type-variables:
    A#1 extends Object declared in method <A#1>timedJava6(String,Supplier<A#1>)
    A#2 extends Object declared in method <A#2>timedJava6(String,Function<String,Void>,Supplier<A#2>)
ProfitJava6.java:17: error: no suitable method found for timedJava6(String,<anonymous MySupplier<Double>>)
    final Double revenue = Timing.timedJava6("Revenue calculation",
                                 ^
    method Timing.<A#1>timedJava6(String,Supplier<A#1>) is not applicable
      (cannot infer type-variable(s) A#1
        (argument mismatch; <anonymous MySupplier<Double>> cannot be converted to Supplier<A#1>))
    method Timing.<A#2>timedJava6(String,Function<String,Void>,Supplier<A#2>) is not applicable
      (cannot infer type-variable(s) A#2
        (actual and formal argument lists differ in length))
  where A#1,A#2 are type-variables:
    A#1 extends Object declared in method <A#1>timedJava6(String,Supplier<A#1>)
    A#2 extends Object declared in method <A#2>timedJava6(String,Function<String,Void>,Supplier<A#2>)
ProfitJava6.java:26: error: cannot find symbol
            LoggerFunctions.info(logger),
            ^
  symbol:   variable LoggerFunctions
  location: class ProfitJava6
ProfitJava6.java:34: error: incompatible types: unexpected return value
    return profit;
           ^
ProfitTest.java:33: error: 'void' type not allowed here
        assertEquals(18845.9, ProfitJava6.calculate(), 0.001);
                                                   ^
Timing.java:48: error: no suitable method found for timed(String,Function<String,Void>,Supplier<A#1>)
    return timed(description, DO_NOTHING, code);
           ^
    method Timing.<A#2>timed(String,Supplier<A#2>) is not applicable
      (cannot infer type-variable(s) A#2
        (actual and formal argument lists differ in length))
    method Timing.<A#3>timed(String,Consumer<String>,Supplier<A#3>) is not applicable
      (cannot infer type-variable(s) A#3
        (argument mismatch; Function<String,Void> cannot be converted to Consumer<String>))
  where A#1,A#2,A#3 are type-variables:
    A#1 extends Object declared in method <A#1>timedJava6(String,Supplier<A#1>)
    A#2 extends Object declared in method <A#2>timed(String,Supplier<A#2>)
    A#3 extends Object declared in method <A#3>timed(String,Consumer<String>,Supplier<A#3>)
6 errors
